# ki-clash

./: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.ko.md  README.md  docker-compose.naver.yml  docker-compose.prod.yml  docker-compose.yml  play.py  pyproject.toml  railway.toml  vercel.json
.claude/commands/: ship.md  tutor.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a67ac29dd885_initial_tables.py  b8f3c72e1a44_add_ranked_and_payment_fields.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/core/: game_store.py  logging.py  observability.py  room_store.py
app/models/: __init__.py  match.py  player.py  round.py  turn.py
app/schemas/: auth.py  (+6 more)
docs/: PROJECT_GUIDE.md  architecture.md  auto-promotion.md  engineering-log.md  firefly-prompts.md  launch-readiness.md  marketing-launch-kit.md  monetization-setup.md  multiplayer-networking.md  spec.md  tasks.md  troubleshooting.md
go-server/: .gitignore  Dockerfile  README.md  auth.go  engine.go  engine_test.go  go.mod  go.sum  handler.go  load_test.py  main.go  messages.go  observability.go  pubsub.go  session.go  store.go  submit_action.lua  test_e2e.py  types.go
load/: README.md  lib.js  rest_load.js  smoke.js  ws_load.js
mobile/: .env.example  app.json  eas.json  package-lock.json  package.json
scripts/: check-launch-marketing.mjs  check-online-parity.mjs  generate-promo-calendar.mjs  generate_strategy_table.py  grandmaster_tournament.py  pvp_simulator.py
web/: .env.production.example  package-lock.json  package.json  vercel.json
(+238 files in other folders)
